AM-3962 PKCE support for IDP - management console (#4843)