@@ -15,27 +15,34 @@
  */
 package io.gravitee.am.management.handlers.management.api.authentication.controller;
 
-import io.gravitee.am.common.utils.RandomString;
-import io.gravitee.am.identityprovider.api.common.Request;
+import io.gravitee.am.common.crypto.CryptoUtils;
+import io.gravitee.am.common.jwt.JWT;
+import io.gravitee.am.common.oidc.idtoken.Claims;
+import io.gravitee.am.common.utils.SecureRandomString;
 import io.gravitee.am.identityprovider.api.social.SocialAuthenticationProvider;
+import io.gravitee.am.jwt.JWTBuilder;
 import io.gravitee.am.management.handlers.management.api.authentication.manager.idp.IdentityProviderManager;
 import io.gravitee.am.management.handlers.management.api.utils.RedirectUtils;
 import io.gravitee.am.model.IdentityProvider;
 import io.gravitee.am.service.OrganizationService;
 import io.gravitee.am.service.ReCaptchaService;
-import io.reactivex.rxjava3.core.Maybe;
+import io.reactivex.rxjava3.core.Single;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Qualifier;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.servlet.ModelAndView;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.security.Key;
+import java.time.Duration;
+import java.time.Instant;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -59,18 +66,15 @@ public class LoginController {
 
     private static final Logger LOGGER = LoggerFactory.getLogger(LoginController.class);
     private static final String LOGIN_VIEW = "login";
-    private static final Map<String, String> socialProviderTypes;
-    static {
-        Map<String, String> sMap = new HashMap<>();
-        sMap.put("github-am-idp", "github");
-        sMap.put("google-am-idp", "google");
-        sMap.put("twitter-am-idp", "twitter");
-        sMap.put("facebook-am-idp", "facebook");
-        sMap.put("franceconnect-am-idp", "franceconnect");
-        sMap.put("azure-ad-am-idp", "microsoft");
-        sMap.put("linkedin-am-idp", "linkedin");
-        socialProviderTypes = Collections.unmodifiableMap(sMap);
-    }
+    private static final Map<String, String> socialProviderTypes = Map.of(
+            "github-am-idp", "github",
+            "google-am-idp", "google",
+            "twitter-am-idp", "twitter",
+            "facebook-am-idp", "facebook",
+            "franceconnect-am-idp", "franceconnect",
+            "azure-ad-am-idp", "microsoft",
+            "linkedin-am-idp", "linkedin"
+    );
 
     @Autowired
     private OrganizationService organizationService;
@@ -81,8 +85,26 @@ public class LoginController {
     @Autowired
     private ReCaptchaService reCaptchaService;
 
+    @Autowired
+    @Qualifier("managementJwtBuilder")
+    private JWTBuilder jwtBuilder;
+
+    @Autowired
+    @Qualifier("managementSecretKey")
+    private Key key;
+
+    /**
+     * How long the state JWT generated for social providers remains valid
+     */
+    @Value("${security.socialProviderStateExpirationSeconds:900}")
+    private int socialIdpStateExpirationSeconds;
+
+    private Duration getSocialIdpStateExpiration() {
+        return Duration.ofSeconds(socialIdpStateExpirationSeconds);
+    }
+
     @RequestMapping(value = "/login")
-    public ModelAndView login(HttpServletRequest request, @RequestParam(value=ORGANIZATION_PARAMETER_NAME, defaultValue = "DEFAULT") String organizationId) {
+    public ModelAndView login(HttpServletRequest request, @RequestParam(value = ORGANIZATION_PARAMETER_NAME, defaultValue = "DEFAULT") String organizationId) {
         Map<String, Object> params = new HashMap<>();
 
         // fetch domain social identity providers
@@ -95,7 +117,7 @@ public class LoginController {
                     .map(identity -> identityProviderManager.getIdentityProvider(identity))
                     .filter(Objects::nonNull)
                     .filter(IdentityProvider::isExternal)
-                    .collect(Collectors.toList());
+                    .toList();
         } catch (Exception ex) {
             LOGGER.error("An error has occurred while loading the organization social providers. It probably means that a social provider is not well started", ex);
         }
@@ -113,8 +135,14 @@ public class LoginController {
                 String identityId = identity.getId();
                 SocialAuthenticationProvider socialAuthenticationProvider = (SocialAuthenticationProvider) identityProviderManager.get(identityId);
                 if (socialAuthenticationProvider != null) {
-                    final Maybe<Optional<Request>> maybe = socialAuthenticationProvider.asyncSignInUrl(buildRedirectUri(request, identityId), RandomString.generate()).map(Optional::ofNullable);
-                    maybe.blockingGet()
+                    var now = Instant.now();
+                    var state = new JWT(Map.of(
+                            Claims.NONCE, SecureRandomString.generate(),
+                            Claims.IAT, now.getEpochSecond(),
+                            Claims.EXP, now.plus(getSocialIdpStateExpiration()).getEpochSecond()));
+                    socialAuthenticationProvider.asyncSignInUrl(buildRedirectUri(request, identityId), state, this::processState)
+                            .map(Optional::ofNullable)
+                            .blockingGet()
                             .ifPresent(idpAuthzRequest -> authorizeUrls.put(identityId, idpAuthzRequest.getUri()));
                 }
             });
@@ -129,6 +157,14 @@ public class LoginController {
         params.put("org", organizationId);
 
         return new ModelAndView(organizationId + "#" + LOGIN_VIEW, params);
+    }
+
+    private Single<String> processState(JWT jwt) {
+        for (var claim : io.gravitee.am.common.jwt.Claims.requireEncryption())
+            if (jwt.containsKey(claim)) {
+                jwt.put(claim, CryptoUtils.encrypt((String) jwt.get(claim), key));
+            }
+        return Single.just(jwtBuilder.sign(jwt));
     }
 
     @RequestMapping(value = "/login/callback")
